[package]
name = "luminliquid-terminal"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "crypto trading terminal."
keywords = ["trade", "crypto", "finance", "financial-terminal"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/Luminliquid"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
arboard = "3.3"
lazy_static = "1.5.0"
rand = "0.8"
